# Pier-X

./: CLAUDE.md  README.en.md  README.md  package.json
.agents/skills/pier-design-system/: SKILL.md
docs/: BACKEND-GAPS.md  PRODUCT-SPEC.md
pier-core/: Cargo.toml
pier-core/src/: git_graph.rs
pier-core/src/egress/: mod.rs  vpn_subprocess.rs
pier-core/src/remote_desktop/: cert_pins.rs  mod.rs  rdp.rs  rdp_freerdp.rs
pier-core/src/services/: code_search.rs  db_tls.rs  mod.rs  nanolink.rs  package_manager.rs  postgres.rs  sqlserver.rs
pier-core/src/services/ai/: cli.rs  mod.rs  provider.rs  redact.rs  risk.rs  types.rs
pier-core/src/ssh/: config.rs
pier-core/src/terminal/: emulator.rs  history.rs
scripts/: bump-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  git_panel.rs  lib.rs  remote_desktop.rs  terminal_smart.rs
src/components/: ChmodDialog.tsx  ComboInput.tsx  DbAddCredentialDialog.tsx  DbInstancePicker.tsx  PortForwardDialog.tsx  ResizeHandle.tsx  Select.tsx  SettingsDialog.tsx  TerminalRow.tsx  VirtualList.tsx
src/components/db/: DbConnectSplash.tsx  DbResultGrid.tsx  DbSqlEditor.tsx  DbStructureView.tsx  dbColumnRules.ts  dbImportExport.ts  dbTheme.ts  useDbCredentialFlow.ts
src/i18n/: zh.json  zhExtra.ts
src/lib/: ai.ts  aiVendors.ts  commands.ts  dbAuthErrors.ts  logger.ts  rightToolMeta.ts  sftpEditor.ts  sftpEditorMeta.ts  shellCommands.ts  sshTunnel.ts  types.ts
src/panels/: AiPanel.tsx  ApacheFeatureCatalog.tsx  CaddyFeatureCatalog.tsx  CaddyMatcherEditor.tsx  CodeSearchPanel.tsx  DatabasePanel.tsx  DockerPanel.tsx  FirewallPanel.tsx  GitPanel.tsx  InfluxPanel.tsx  LogViewerPanel.tsx  MySqlPanel.tsx  NanoLinkPanel.tsx  NewWebServerSite.tsx  NginxFeatureCatalog.tsx  NginxPanel.tsx  PostgresPanel.tsx  RedisPanel.tsx  RemoteSqlPanel.tsx  ServerMonitorPanel.tsx  SftpPanel.tsx  SoftwarePanel.tsx  SqlServerPanel.tsx  SqlitePanel.tsx  TerminalPanel.tsx  WebServerPanel.tsx
src/shell/: BroadcastDialog.tsx  EgressProfilesDialog.tsx  NewConnectionDialog.tsx  RightSidebar.tsx  Sidebar.tsx  ToolStrip.tsx
src/stores/: useAiStore.ts  useEgressStore.ts  useSettingsStore.ts  useTabStore.ts  useUiActionsStore.ts
src/styles/: ai-panel.css  atoms.css  broadcast-dialog.css  code-search-panel.css  db-panel.css  monitor-panel.css  nanolink-panel.css  pier-x.css  settings-dialog.css  shell.css  terminal-panel.css  tokens.css  web-server-panel.css
