[package]
name = "pier-core"
version = "0.6.4"
edition = "2021"
description = "Cross-platform core engine for Pier-X — terminal, SSH, RDP, VNC, databases"
license = "MIT"
repository = "https://github.com/chenqi92/Pier-X"

[dependencies]
# Error handling
thiserror = "2"
anyhow = "1"
futures-util = { version = "0.3", default-features = false }

# Logging
log = "0.4"

# Serialization (for config / IPC)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# YAML parser/emitter — used by `services::compose_k8s` to read a
# Compose template into a typed struct and emit a Kubernetes-shaped
# manifest the user can `kubectl apply -f -`. `serde_yml` is the
# maintained fork of the abandoned `serde_yaml`; same API, no extra
# bridge crate needed.
serde_yml = "0.0.12"

# HTTP client used by `services::webhook` for the post-install /
# post-uninstall webhook fan-out (Slack / Discord / Teams / custom
# monitoring). `ureq` is blocking + tiny; `rustls` keeps the TLS
# story portable (no system OpenSSL on Windows / older glibc).
# Stays inside a `spawn_blocking` task so the calling tokio
# runtime never blocks waiting on a webhook timeout.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

# HMAC-SHA256 for optional webhook payload signing. `hmac` + `sha2`
# is the canonical Rust pair; `hex` formats the 32-byte digest as
# the lowercase hex string the receiving service typically expects
# in the `X-Pier-Signature` header.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Machine-bound encrypted local fallback for secrets (see
# `local_secret_store`). Consulted by `credentials` ONLY when the OS
# keyring is unavailable (Linux without secret-service, Windows where
# Credential Manager silently drops the write) — so a remembered sudo
# password survives a restart instead of living only in process memory.
# AES-256-GCM under a 32-byte key kept in a `0600` key file in the data
# dir; `getrandom` fills the key + per-entry nonce; `zeroize` wipes the
# key from memory after use. All three already build for russh / keyring
# (pure Rust, no new system libraries).
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
getrandom = "0.2"
zeroize = "1"

# Cross-platform credential storage. The actual `keyring` dependency
# lives in the per-target sections below: keyring 3 ships NO storage
# backend unless a platform feature is enabled (without one it silently
# falls back to a non-persistent in-memory mock, so every password write
# is dropped and credentials never survive a restart). Each OS gets only
# its own backend so no platform pulls another's system libraries.

# Cross-platform paths
directories = "6"

# Terminal emulation — VT100 / ANSI parser (cross-platform, pure Rust)
vte = "0.15"

# SSH client. `russh` drives an async SSH session (TCP handshake,
# key exchange, authentication, channels, port forwarding). The
# `Pty` trait in terminal::pty is synchronous, so the ssh module
# bridges the two worlds via a shared multi-thread tokio runtime
# behind a `OnceLock`. Keep default features off so russh uses the
# existing ring-backed crypto path instead of pulling aws-lc-sys/CMake.
russh = { version = "0.60", default-features = false, features = ["async-trait", "flate2", "ring", "rsa"] }

# SFTP subsystem on top of russh. Gives us read_dir / open /
# read / write / mkdir / remove / rename without us having to
# reimplement the SFTP protocol framing. Only the client half
# is used by pier-x today.
russh-sftp = "2.1"

# Redis client. M5a adds a Redis browser panel as the first
# per-service tool. `tokio-comp` pulls in async IO on our shared
# tokio runtime; `connection-manager` gives us transparent
# reconnect if the tunnel flaps. No TLS features — we connect
# through the SSH tunnel, so traffic is already encrypted.
redis = { version = "1.2", default-features = false, features = [
    "tokio-comp", "connection-manager", "acl", "script",
] }

# PostgreSQL client for the M7a panel. `tokio-postgres` is
# the canonical async PG client in the Rust ecosystem. Default
# features pull in `runtime` (tokio net+time) which we already
# have via the shared runtime. TLS is opt-in per connection (see
# `db_tls::TlsMode`, default off) — the SSH tunnel remains the
# encouraged path; direct cleartext to a non-loopback host is the
# case `require`/`verify-full` protect.
tokio-postgres = "0.7"
# Opt-in TLS for the direct (non-tunneled) PostgreSQL path. Pinned to the
# same rustls 0.23 already in the tree (RDP / ureq), so no second
# rustls stack is added for PG. `ring` selects an explicit crypto provider
# (both ring + aws-lc-rs are present transitively, so the default is
# ambiguous and must be named) — `webpki-roots` backs `verify-full`.
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

# Git graph engine — libgit2 binding for in-process ref
# decoration, revwalk, tree diff, and branch enumeration.
# The heavy `graph_log()` uses subprocess `git log` for exact
# IDEA-matching topo order, but enriches results with libgit2
# for ref decorations. Also used by `list_branches()`,
# `first_parent_chain()`, and `detect_default_branch()`.
git2 = { version = "0.20", default-features = false }

# Markdown → HTML renderer for the local Markdown preview
# panel (M5e). `pulldown-cmark` is the reference CommonMark
# implementation in the Rust ecosystem; we enable a superset
# of GFM extensions (tables, strikethrough, task lists,
# footnotes) so typical README.md files render the way the
# user expects on GitHub. No HTML passthrough — we escape
# everything by default to avoid rendering untrusted HTML
# embedded in a .md file we just opened from disk.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# MySQL client for the M5d panel. `mysql_async` is Tokio-
# based so it plugs into the shared runtime with zero extra
# work. `minimal-rust` drops the native TLS dep — pier-x's
# MySQL panel connects via an SSH tunnel to 127.0.0.1:<port>,
# so the transport is already encrypted. flate2 keeps its
# pure-Rust backend (no zlib system dep).
mysql_async = { version = "0.36", default-features = false, features = ["minimal-rust"] }

# Microsoft SQL Server (TDS) client for the unified database panel's
# SQL Server product. `tiberius` is the pure-Rust TDS driver. The
# `rustls` feature gives it opt-in TLS (see `db_tls::TlsMode`, default
# off) — tiberius drives its own rustls stack internally, so we only set
# the `EncryptionLevel` + whether to trust the cert. (That stack is
# rustls 0.21, independent of the rustls 0.23 used elsewhere.) `chrono` +
# `rust_decimal` let DATETIME / DECIMAL columns stringify properly.
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls"] }
# Already pulled in by the tiberius features above — declared directly so
# we can name `chrono::NaiveDateTime` / `rust_decimal::Decimal` when
# stringifying SQL Server DATETIME / DECIMAL columns. Versions unify with
# tiberius's, so no extra code lands in the tree.
chrono = { version = "0.4", default-features = false }
rust_decimal = { version = "1", default-features = false }

# Async runtime for russh. Only the `rt-multi-thread` + time + net
# features — we don't need full. `fs` is pulled in for the SFTP
# upload/download helpers that read/write local files from inside
# the shared runtime.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", "time", "net", "sync", "io-util", "macros", "fs",
] }

# Cancellation token plumbing for long-running streamed remote
# commands (apt install, docker pull, …) — `tokio::select!`-friendly
# trigger that we hand into `SshSession::exec_command_streaming` so
# the Software panel can abort an in-flight install without tearing
# down the whole SSH session.
# `compat` bridges tokio's TcpStream into the futures AsyncRead/Write
# that tiberius expects (`tcp.compat_write()`).
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }

# Cross-platform process inspection for the SSH watcher: the
# local terminal's child tree is scanned once per second so the
# right-side Server Monitor panel can follow a `ssh user@host`
# launched inside the shell (or a nested ssh inside a session).
# `sysinfo` reads /proc on Linux, libproc on macOS, and the NT
# APIs on Windows — we disable its disk/network/component probes
# (we only need processes + their cmdline) to keep the refresh
# cheap and predictable.
sysinfo = { version = "0.33", default-features = false, features = [
    "system",
    "disk",
    "network",
] }
# File-preview decoding for the SFTP multi-format viewer (see
# `preview`). All pure-Rust, no system libs — keeps the .deb/.rpm/
# .AppImage and Windows builds portable.
#   * `content_inspector` + `chardetng` + `encoding_rs`: sniff
#     text-vs-binary and the charset (UTF-8/16, GBK, Shift-JIS, …)
#     from a small prefix, then incrementally decode streamed
#     windows to UTF-8 — so a huge log's first screen paints after
#     one round trip and chunk splits never corrupt multibyte chars.
#   * `calamine`: read-only xlsx/xlsb/xls/ods reader (legacy .xls
#     included) feeding the shared preview table.
#   * `csv`: delimited-text (csv/tsv) parsing into the same table.
#   * `image`: decode formats the WebView can't render natively
#     (TIFF, …) and re-encode to PNG. Only the codecs we actually
#     fall back on are enabled to keep compile time and binary size
#     down; png/jpeg/gif/bmp the webview handles itself, but the
#     decoders are cheap and let exotic variants round-trip.
content_inspector = "0.2"
chardetng = "1"
encoding_rs = "0.8"
calamine = "0.35"
csv = "1"
image = { version = "0.25", default-features = false, features = ["tiff", "png", "bmp", "gif", "jpeg"] }

# ── Remote desktop (RDP + VNC) ──────────────────────────────────────
# VNC is implemented in-crate (see `remote_desktop::vnc`) as a small RFB
# 3.8 client so we own the security handshake — in particular Apple's ARD
# auth (RFB security type 30, used by modern macOS Screen Sharing), which
# no published Rust VNC crate implements. The auth primitives:
#   * `des`     — VNC Authentication (type 2): DES-encrypt the 16-byte
#                 server challenge with the (bit-reversed) password.
#   * `num-bigint` + `md-5` + `aes` — Apple ARD (type 30): Diffie-Hellman
#                 key agreement → MD5(shared secret) → AES-128-ECB of the
#                 128-byte username/password block.
# `flate2` decodes the zlib framebuffer rectangles VNC servers send.
des = "0.8"
md-5 = "0.10"
aes = "0.8"
num-bigint = "0.4"
flate2 = "1"

# Dirty-rect re-encode for the RDP canvas path. IronRDP software-decodes
# RemoteFX into a full RGBA framebuffer; we slice each dirty rect and JPEG
# it before it crosses the WebView IPC channel. `jpeg-encoder` is a
# pure-Rust baseline encoder with a SIMD fast path (no C / libjpeg-turbo
# system dep, so the cross-target builds stay portable) and encodes
# straight from RGBA — several× faster than `image`'s scalar encoder on
# this per-frame hot path, which keeps the encode synchronous (and frame
# order intact) instead of needing a worker.
jpeg-encoder = "0.6"

# RDP via IronRDP (Devolutions) — a headless, UI-agnostic protocol stack.
# Behind the default `rdp` feature so the VNC path (and the rest of the
# crate) still builds with `--no-default-features` while the heavier RDP
# dependency tree (rustls + the CredSSP/NLA stack) is iterated on.
# `ironrdp-tokio`'s `reqwest` feature provides the async `NetworkClient`
# that `connect_finalize` requires (it is only actually used for Kerberos
# KDC traffic; username/password NLA runs NTLM in-band).
ironrdp = { version = "0.15", default-features = false, features = ["connector", "session", "input", "graphics", "pdu"], optional = true }
ironrdp-tokio = { version = "0.9", features = ["reqwest"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"], optional = true }
x509-cert = { version = "0.2", default-features = false, features = ["std"], optional = true }

[features]
default = ["rdp"]
# Compile the IronRDP-backed RDP client. On by default; disable with
# `--no-default-features` to build only the in-crate VNC client plus the
# rest of pier-core (faster iteration, no rustls build).
rdp = ["dep:ironrdp", "dep:ironrdp-tokio", "dep:tokio-rustls", "dep:x509-cert"]

# Unix PTY — forkpty + ioctl wrappers live in libc. Only pulled in on
# Unix targets; Windows uses the ConPTY-backed implementation below.
# Once the Unix impl needs safer wrappers the `nix` crate slots in here.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS Keychain backend for `keyring`.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# Linux Secret Service backend for `keyring`. `crypto-rust` keeps the
# encrypted D-Bus session pure-Rust (no system OpenSSL) so the
# .deb / .rpm / .AppImage builds stay portable.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
# Windows Credential Manager backend for `keyring`.
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
env_logger = "0.11"
