[package]
name = "pierx"
version = "0.5.2"
description = "Pier-X — cross-platform terminal / Git / SSH / database management tool (Tauri runtime)"
authors = ["chenqi"]
license = "MIT"
repository = "https://github.com/chenqi92/Pier-X"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pierx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` exposes `open_devtools()` / `close_devtools()` on the webview
# window. The IPC command that uses them is `cfg(debug_assertions)`-gated,
# and the frontend only binds the shortcut in dev — so release builds have
# no path that reaches DevTools.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Native clipboard access — replaces `navigator.clipboard.readText/writeText`
# so the Chromium webview never raises its "this site wants to read the
# clipboard" permission prompt. The desktop shell owns the clipboard
# unconditionally; the prompt would be a UX regression vs. an actual
# native app.
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CancellationToken for the in-flight install / update / uninstall
# registry — see `software_install_cancel` and pier-core's
# `package_manager`. Default features only (we just need the `sync`
# token primitives).
tokio-util = { version = "0.7", default-features = false }
# Used for the host-key prompt callback: a oneshot channel
# carries the user's accept/reject answer back from the
# `ssh_host_key_decide` command into the verifier callback,
# with a timeout fallback so a forgotten dialog can't pin SSH
# worker threads forever.
tokio = { version = "1", features = ["sync", "time"] }
pier-core = { path = "../pier-core" }

