[package]
name = "pierx"
version = "0.6.3"
description = "Pier-X — cross-platform terminal / Git / SSH / database management tool (Tauri runtime)"
authors = ["chenqi"]
license = "MIT"
repository = "https://github.com/chenqi92/Pier-X"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pierx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# DevTools are compiled in automatically for debug builds (`tauri dev`).
# The `devtools` cargo feature would also bake them into release builds
# through WebKit *private* APIs — an automatic Mac App Store rejection —
# so it stays off; release ships with no DevTools code at all. The IPC
# toggle command is `cfg(debug_assertions)`-gated to match.
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Native clipboard access — replaces `navigator.clipboard.readText/writeText`
# so the Chromium webview never raises its "this site wants to read the
# clipboard" permission prompt. The desktop shell owns the clipboard
# unconditionally; the prompt would be a UX regression vs. an actual
# native app.
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
# CancellationToken for the in-flight install / update / uninstall
# registry — see `software_install_cancel` and pier-core's
# `package_manager`. Default features only (we just need the `sync`
# token primitives).
tokio-util = { version = "0.7", default-features = false }
# Used for the host-key prompt callback: a oneshot channel
# carries the user's accept/reject answer back from the
# `ssh_host_key_decide` command into the verifier callback,
# with a timeout fallback so a forgotten dialog can't pin SSH
# worker threads forever.
tokio = { version = "1", features = ["sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.29"
# In-process MCP permission server for the AI assistant's "gated agent"
# (M2b) CLI mode: Claude calls our local-HTTP `approve` tool before every
# tool use and we answer allow/deny through the existing L0–L3 approval
# flow (PRODUCT-SPEC §5.14.8). Small, sync, std-only HTTP server.
tiny_http = "0.12"
pier-core = { path = "../pier-core" }

[features]
# Opt-in: route the RDP protocol through the FreeRDP H.264/AVC444 backend
# instead of IronRDP. OFF by default — enabling it triggers the native
# libfreerdp3 source build in `freerdp-sys` (cmake + bindgen + a H.264 decoder).
# Build with `cargo tauri build --features rdp-freerdp` (or `cargo build -p
# pierx --features rdp-freerdp`). The default app build stays pure-Rust.
rdp-freerdp = ["pier-core/rdp-freerdp"]
